# umli

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
docs/: index.md
samples/: MODEL_XMI.xml  sample_1.xml  test.py
sandbox/: README.SANDBOX.md  load_sample_1.py  visit_sample_1.py
tests/: sample_test.py
tests/model/: conftest.py  test_uml_object.py
tests/model/diagrams/: test_class_diagram.py
uml-interpreter/consistency_checker/: consistency_checker.py
uml-interpreter/deserializer/: deserializer.py
uml-interpreter/model/: base_classes.py  class_diagram.py  component_diagram.py  sequence_diagram.py
uml-interpreter/serializer/: serializer.py
uml_interpreter/consistency_checker/: consistency_checker.py
uml_interpreter/deserializer/: __init__.py  abstract.py  constants.py  deserializer.py  errors.py
uml_interpreter/deserializer/enterprise_architect/: __init__.py  constants.py  ea_xml_deserializer.py  utils.py
uml_interpreter/model/: abstract.py  base_classes.py  class_diagram.py  component_diagram.py  errors.py  model.py  sequence_diagram.py
uml_interpreter/model/diagrams/: abstract.py  class_diagram.py  component_diagram.py  sequence_diagram.py
uml_interpreter/serializer/: serializer.py
uml_interpreter/source/: abstract.py  source.py
uml_interpreter/visitor/: __init__.py  model_visitor.py  visitor.py
