[tool.poetry]
name = "uml-tools"
version = "0.1.0"
description = ""
authors = ["Filip Pawłowski", "Hubert Soroka", "Maciej Tymoftyjewicz"]
readme = "README.md"

packages = [
    { include = "uml-tools" },
    { include = "uml-tools/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
tox = "^4.11.3"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


