[tool.poetry]
name = "uml-interpreter"
version = "0.0.2a0"
description = ""
authors = ["Filip Pawłowski", "Hubert Soroka", "Maciej Tymoftyjewicz"]
readme = "README.md"

packages = [
    { include = "uml-interpreter" },
    { include = "uml-interpreter/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
tox = "^4.11.3"
pytest = "^7.4.3"
black = "^23.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


